--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -31,7 +31,7 @@ body {
   position: relative;
   padding: 0.75rem 1.5rem;
   background-color: transparent;
-  color: white;
+  color: rgb(0, 0, 0);
   font-weight: bold;
   border: 2px solid transparent;
   border-radius: 9999px;
@@ -63,7 +63,7 @@ body {
 .heading {
   background-color: transparent;
   border: none;
-  color: rgb(148, 172, 199);
+  color: rgba(29, 30, 31, 0.329);
   font-size: 6rem;
   font-weight: bold;
   cursor: pointer;
@@ -96,4 +96,107 @@ body {
 
 .btn:hover::before {
   /* Button hover before styles */
+}
+
+
+.box {
+  display: flex;
+  background-color: rgba(184, 184, 184, 0.637);
+  border-radius: 10px;
+  padding: 20px;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  max-width: 100%; /* Adjust the max-width as needed */
+  height: 500px;
+  transition: transform 0.3s;
+}
+
+.box:hover {
+  transform: scale(1.05);
+}
+
+.title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.description {
+  font-size: 16px;
+}
+
+.welcome-text {
+  font-size: 3rem;
+  color: #131212;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  letter-spacing: 2px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.text-container {
+  flex: 1;
+  padding-right: 24px;
+}
+
+.title {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.description {
+  font-size: 2rex;
+  color: #131212;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  
+  text-align: center;
+  margin-top: 16px;
+  
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
+
+.button {
+  border-radius: 20px;
+  margin: 0 8px;
+  padding: 8px 16px;
+  background-color: #000000;
+  color: #c2c2c2;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color:rgba(34, 34, 34, 0.315);
+}
+
+
+.image-container {
+  display: flex;
+}
+
+.image {
+  
+  border-radius: 10px;
+  width: 400px;
+  padding: 8px;
+  height: 500px;
+  border-radius: 4px;
+}
+
+.image:hover {
+  transform: scale(1.05);
+
 }
